Enhance stock validation in 'Add to Cart' to inform users of insufficient stock in the database and total quantity. Display error messages showing available stock and remaining quantity after considering items already added to the cart.

--- a/src/main/resources/view/PlaceOrderForm.fxml
+++ b/src/main/resources/view/PlaceOrderForm.fxml
@@ -9,7 +9,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.control.TreeTableColumn?>
-<?import javafx.scene.effect.ColorAdjust?>
 <?import javafx.scene.effect.Glow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -61,10 +60,12 @@
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
                <ripplerFill>
-                  <RadialGradient centerX="0.5833333333333334" centerY="0.5" radius="0.5">
+                  <RadialGradient centerX="0.37222222222222223" centerY="0.3476190476190476" cycleMethod="REFLECT" focusAngle="37.41" focusDistance="0.13953488372093026" radius="0.6627906976744187">
                      <stops>
-                        <Stop color="BLACK" />
-                        <Stop color="#685d5d" offset="1.0" />
+                        <Stop color="#38a13d" />
+                        <Stop color="#0d4d6b" offset="0.007662835249042145" />
+                        <Stop color="#21f01af2" offset="0.9808429118773946" />
+                        <Stop color="#21ed1ae2" offset="1.0" />
                      </stops>
                   </RadialGradient>
                </ripplerFill>
@@ -74,10 +75,12 @@
                   <Font name="Leelawadee UI Bold" size="14.0" />
                </font>
                <ripplerFill>
-                  <RadialGradient centerX="0.5833333333333334" centerY="0.5" radius="0.5">
+                  <RadialGradient centerX="0.37222222222222223" centerY="0.3476190476190476" cycleMethod="REFLECT" focusAngle="37.41" focusDistance="0.13953488372093026" radius="0.6627906976744187">
                      <stops>
-                        <Stop color="BLACK" />
-                        <Stop color="#685d5d" offset="1.0" />
+                        <Stop color="#38a13d" />
+                        <Stop color="#0d4d6b" offset="0.007662835249042145" />
+                        <Stop color="#21f01af2" offset="0.9808429118773946" />
+                        <Stop color="#21ed1ae2" offset="1.0" />
                      </stops>
                   </RadialGradient>
                </ripplerFill>
@@ -113,9 +116,6 @@
                      </font>
                   </Label>
                   <JFXComboBox fx:id="cmbCustomerID" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="63.0" prefHeight="29.0" prefWidth="164.0">
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter customer ID here" />
                      </tooltip>
@@ -129,9 +129,6 @@
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter customer name here" />
                      </tooltip>
@@ -142,9 +139,6 @@
                      </font>
                   </Label>
                   <JFXComboBox fx:id="cmbItemCode" blendMode="ADD" focusColor="WHITE" layoutX="19.0" layoutY="181.0" prefHeight="29.0" prefWidth="164.0">
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter item code here" />
                      </tooltip>
@@ -158,9 +152,6 @@
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter item description here" />
                      </tooltip>
@@ -174,9 +165,6 @@
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter unit price here" />
                      </tooltip>
@@ -190,9 +178,6 @@
                      <font>
                         <Font name="System Italic" size="13.0" />
                      </font>
-                     <effect>
-                        <ColorAdjust brightness="1.0" contrast="0.4" hue="1.0" saturation="0.8" />
-                     </effect>
                      <tooltip>
                         <Tooltip text="Enter buying quantity here" />
                      </tooltip>
